# indivis-fastapi-mailer

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: regex.py  schema.py
src/core/parsers/: bienici.py  vousamoi.py
src/email/: regex.py  router.py  schema.py
src/email/parsers/: bienici.py
src/mock/: bienici.py  vousamoi.py
