[tool.poetry]
name = "fastapi-emailer"
version = "0.1.0"
description = ""
authors = ["axelSchouten <axel.schouten@chargeguru.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
